--- a/mpd/.mpd/mpd.conf
+++ b/mpd/.mpd/mpd.conf
@@ -19,7 +19,7 @@ bind_to_address					"0.0.0.0"
 # And for Unix Socket
 #bind_to_address				"/run/mpd/socket"
 port							"6600"
-#log_level						"default"
+log_level						"default"
 #gapless_mp3_playback			"yes"
 #restore_paused 				"no"
 #save_absolute_paths_in_playlists	"no"
