--- a/xfce4/.config/xfce4/desktop/icons.screen0-1350x727.rc
+++ b/xfce4/.config/xfce4/desktop/icons.screen0-1350x727.rc
@@ -1,10 +1,6 @@
 [xfdesktop-version-4.10.3+-rcfile_format]
 4.10.3+=true
 
-[2632A4875B8B2E1F]
-row=3
-col=0
-
 [Trash]
 row=0
 col=0
@@ -13,7 +9,7 @@ col=0
 row=1
 col=0
 
-[/home/rook]
+[/home/poole]
 row=2
 col=0
 
