--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -3,6 +3,7 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $editor subl3
 
 #Color Variables
 set $base00 #101218
@@ -40,27 +41,14 @@ set $base0F #1f222d
 #set $darkcyan    #689d6a
 #set $cyan        #8ec07c
 #set $darkwhite   #a89984
-#set $white       #ebdbb2"Nadie te va a hacer"Nadie te va a hacer tortas más ricas que yo" tortas más ricas que yo"
+#set $white       #ebdbb2
 # Use custom colors for black
 #set $black       #282828
 #set $darkblack   #1d2021
 #set $transparent #00000000
 
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below. ISO 10646 = Unicode
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, if you need a lot of unicode glyphs or
-# right-to-left text rendering, you should instead use pango for rendering and
-# chose a FreeType font, such as:
-# font pango:DejaVu Sans Mono 10
-#  font pango:glisp 8
 font pango:yuki 8
-#  pango=true
-#  floating_modifier $mod
-#  hide_edge_borders both
-#  new_window none
 
 
 # i3-gaps from https://github.com/Airblader/i3
@@ -298,6 +286,7 @@ bindsym $mod+8 workspace $workspace8
 bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace10
 
+bindsym $mod+Tab workspace back_and_forth
 
 # Move focused container to workspace -----------------------------------------------------------------------------------------
 
@@ -316,7 +305,7 @@ bindsym $mod+Shift+0 move container to workspace $workspace10
 # Assign workspaces -----------------------------------------------------------------------------------------------------------
 assign [class="Subl3"] $workspace4
 #assign [class="Pantheon-terminal"] $workspace2
-assign [class="^chromium$"] $workspace1
+assign [class="^chromium"] $workspace1
 #assign [class="chromium"] $workspace1
 assign [class="Firefox"] $workspace5
 # Xfce Related
@@ -460,6 +449,15 @@ bindsym XF86AudioNext exec --no-startup-id mpc --host=0.0.0.0 --port=6600 next
 
 # Window Instances  --------------------------------------------------------------------------------------------------------
 
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="bubble"] floating enable
+for_window [window_role="task_dialog"] floating enable
+for_window [window_role="Preferences"] floating enable
+for_window [window_type="dialog"] floating enable
+for_window [window_type="menu"] floating enable
+
+for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move down 34 px
+
 for_window [class="Pavucontrol"] floating enable, border none
 #for_window [class="Sublime_text"] border none
 for_window [class="Subl3"] border none
@@ -475,7 +473,7 @@ for_window [class="File-roller"] floating enable
 for_window [class="URxvt"] border none
 for_window [class="Steam"] floating enable, border normal
 for_window [class="mpv"] floating enable, border none
-for_window [class="Virt-manager"] floating enable
+for_window [class="Virt-manager"] layout stacked
 for_window [class="Nautilus"] floating enable, border none
 for_window [class="^Chromium$"] border none
 for_window [class="^discord$"] border none
