--- a/i3/.config/i3/conf/myblocks.conf
+++ b/i3/.config/i3/conf/myblocks.conf
@@ -4,6 +4,7 @@ full_text= 
 #full_text=  
 #full_text=  
 align=center
+#color=#599CAA
 color=#7780a1
 separator=false
 separator_block_width=4
@@ -14,21 +15,28 @@ separator_block_width=4
 #interval=once
 
 [window title]
+label=   
 command=xtitle -s
 interval=persist
 #command=~/.config/i3/blocks/window
 #command=xdotool getactivewindow getwindowname #original solution
 #interval=3
 #interval=repeat # kills CPU
-label= 
+#label= 
 #label=  
 #label=  
+#color=#599CAA
 color=#7780A1
 #color=#A6D1FA
 align=left
 
-
 [separator]
+
+#[bandwidth2]
+#label=
+#interval=3
+
+#[separator]
 
 #[workspaces]
 #command=cat /dev/shm/workspaces.pango
@@ -48,26 +56,26 @@ align=left
 
 [ssid]
 command=echo "$(iw dev wlp3s0 link | grep SSID | cut -d " " -f 2-)"
-interval=30
+interval=300
 
 [wifi]
 instance=wlp3s0
 label=
-interval=30
+interval=300
 
 [separator]
 
 [battery2]
 label=
-interval=30
+interval=60
 
 [separator]
 
 [disk]
 #command=df -h | grep /dev/sda1 | awk '{print $5,$3,$4}'
-command=df -h | grep /dev/mapper/AntergosVG-AntergosRoot | awk '{print $5,$4}'
+command=df -h | grep /dev/sda5 | awk '{print $5,$4}'
 #command=~/.i3/scripts/disk | sed '1,2s/$/ free/'
-interval=60
+interval=3600
 label= 
 #color=#C9CCDB
 
@@ -103,15 +111,17 @@ label=
 #[separator]
 
 [temperature]
-command=~/.config/i3/myblocks/temperature -w 50 -c 60
-label=
+command=~/.config/i3/myblocks/temperature -w 53 -c 65
+#label=
+label=
 interval=10
 
 [separator]
 
 [weather]
 command=~/.config/i3/myblocks/iconweather.sh "SAM|AR|AR013|MENDOZA"
-interval=180
+interval=3600
+#color=#98D1CE
 color=#C9CCDB
 
 [separator]
@@ -130,31 +140,34 @@ color=#C9CCDB
 #command=~/.config/i3/myblocks/volume
 interval=10
 label=
+#color=#98D1CE
 color=#C9CCDB
 
 [separator]
 
 [packages]
-command=~/.config/i3/myblocks/packages4
+command=~/.config/i3/myblocks/packages5
 #label=
 label=
 #label=
-interval=300
+interval=600
 
 [separator]
 
 [date]
 command=echo "`date +'%d %b'`" ; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
-interval=600
+interval=28800
 label=
 #label=
 #label=
+#color=#98D1CE
 color=#C9CCDB
 
 [time]
 command=echo "`date +'%H:%M'`"
 interval=60
 label=
+#color=#98D1CE
 color=#C9CCDB
 
 [separator]
