--- a/nano/.nano/makefile.nanorc
+++ b/nano/.nano/makefile.nanorc
@@ -1,22 +1,23 @@
-syntax "makefile" "([Mm]akefile|\.ma?k)$"
+syntax "Makefile" "([Mm]akefile|\.ma?k)$"
 header "^#!.*/(env +)?[bg]?make( |$)"
 
-KEYWORD:  "\<(ifeq|ifdef|ifneq|ifndef|else|endif)\>"
-KEYWORD:  "^(export|include|override)\>"
-SECTION:  "^[^:=	]+:"
-OPERATOR: "[=,%]" "\+=|\?=|:=|&&|\|\|"
-FUNCTION: "\$\((abspath|addprefix|addsuffix|and|basename|call|dir)[[:space:]]"
-FUNCTION: "\$\((error|eval|filter|filter-out|findstring|firstword)[[:space:]]"
-FUNCTION: "\$\((flavor|foreach|if|info|join|lastword|notdir|or)[[:space:]]"
-FUNCTION: "\$\((origin|patsubst|realpath|shell|sort|strip|suffix)[[:space:]]"
-FUNCTION: "\$\((value|warning|wildcard|word|wordlist|words)[[:space:]]"
-PLAIN:    "[()$]"
-+STRING
-VARIABLE: "\$+(\{[^} ]+\}|\([^) ]+\))"
-VARIABLE: "\$[@^<*?%|+]|\$\([@^<*?%+-][DF]\)"
-ESCAPE:   "\$\$|\\.?"
-+HASHCOMMENT
-COMMENT:  "^	@#.*"
+color cyan  "\<(ifeq|ifdef|ifneq|ifndef|else|endif)\>"
+color cyan  "^(export|include|override)\>"
+color brightmagenta  "^[^:=	]+:"
+color brightmagenta  "^[^:+	]+\+"
+color red "[=,%]" "\+=|\?=|:=|&&|\|\|"
+color brightblue "\$\((abspath|addprefix|addsuffix|and|basename|call|dir)[[:space:]]"
+color brightblue "\$\((error|eval|filter|filter-out|findstring|firstword)[[:space:]]"
+color brightblue "\$\((flavor|foreach|if|info|join|lastword|notdir|or)[[:space:]]"
+color brightblue "\$\((origin|patsubst|realpath|shell|sort|strip|suffix)[[:space:]]"
+color brightblue "\$\((value|warning|wildcard|word|wordlist|words)[[:space:]]"
+color black    "[()$]"
+color yellow ""(\\.|[^"])*"|'(\\.|[^'])*'"
+color brightyellow "\$+(\{[^} ]+\}|\([^) ]+\))"
+color brightyellow "\$[@^<*?%|+]|\$\([@^<*?%+-][DF]\)"
+color magenta   "\$\$|\\.?"
+color brightblack "(^|[[:space:]])#([^{].*)?$"
+color brightblack  "^	@#.*"
 
 # Show trailing whitespace
 color ,green "[[:space:]]+$"
