--- a/i3/.config/i3/conf/myblocks.conf
+++ b/i3/.config/i3/conf/myblocks.conf
@@ -4,7 +4,6 @@ full_text= 
 #full_text=  
 #full_text=  
 align=center
-#color=#599CAA
 color=#7780a1
 separator=false
 separator_block_width=4
@@ -15,28 +14,19 @@ separator_block_width=4
 #interval=once
 
 [window title]
-label=   
+#label=   
+label=
 command=xtitle -s
 interval=persist
 #command=~/.config/i3/blocks/window
 #command=xdotool getactivewindow getwindowname #original solution
 #interval=3
-#interval=repeat # kills CPU
-#label= 
 #label=  
 #label=  
-#color=#599CAA
 color=#7780A1
-#color=#A6D1FA
 align=left
 
 [separator]
-
-#[bandwidth2]
-#label=
-#interval=3
-
-#[separator]
 
 #[workspaces]
 #command=cat /dev/shm/workspaces.pango
@@ -56,28 +46,27 @@ align=left
 
 [ssid]
 command=echo "$(iw dev wlp3s0 link | grep SSID | cut -d " " -f 2-)"
-interval=300
+interval=30
 
 [wifi]
 instance=wlp3s0
 label=
-interval=300
+interval=30
 
 [separator]
 
 [battery2]
 label=
-interval=60
+interval=30
 
 [separator]
 
 [disk]
 #command=df -h | grep /dev/sda1 | awk '{print $5,$3,$4}'
-command=df -h | grep /dev/sda5 | awk '{print $5,$4}'
+command=df -h | grep /dev/mapper/AntergosVG-AntergosRoot | awk '{print $5,$4}'
 #command=~/.i3/scripts/disk | sed '1,2s/$/ free/'
-interval=3600
+interval=60
 label= 
-#color=#C9CCDB
 
 [separator]
 
@@ -111,8 +100,7 @@ label=
 #[separator]
 
 [temperature]
-command=~/.config/i3/myblocks/temperature -w 53 -c 65
-#label=
+command=~/.config/i3/myblocks/temperature -w 50 -c 60
 label=
 interval=10
 
@@ -120,13 +108,13 @@ interval=10
 
 [weather]
 command=~/.config/i3/myblocks/iconweather.sh "SAM|AR|AR013|MENDOZA"
-interval=3600
-#color=#98D1CE
+interval=180
 color=#C9CCDB
 
 [separator]
 
 #[brightness]
+#command=~/.config/i3/myblocks/bright2.sh
 #label=
 #label=
 #label=
@@ -137,11 +125,10 @@ color=#C9CCDB
 #[separator]
 
 [volume]
-#command=~/.config/i3/myblocks/volume
-interval=10
+interval=once
 label=
-#color=#98D1CE
 color=#C9CCDB
+signal=10
 
 [separator]
 
@@ -150,24 +137,22 @@ command=~/.config/i3/myblocks/packages5
 #label=
 label=
 #label=
-interval=600
+interval=300
 
 [separator]
 
 [date]
 command=echo "`date +'%d %b'`" ; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
-interval=28800
+interval=600
 label=
 #label=
 #label=
-#color=#98D1CE
 color=#C9CCDB
 
 [time]
 command=echo "`date +'%H:%M'`"
 interval=60
 label=
-#color=#98D1CE
 color=#C9CCDB
 
 [separator]
