--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,57 +5,26 @@
 set $mod Mod4
 set $editor subl3
 
-#Color Variables
+#Color Variables - Original Arc Theme
 set $base00 #101218
 set $base01 #1f222d
 set $base02 #252936
 set $base03 #7780a1
-set $base04 #C0C5CE
+set $base04 #ffffff
 set $base05 #d1d4e0
-set $base06 #C9CCDB
-set $base07 #ffffff
-set $base08 #ee829f
-set $base08 #f4265d
-#set $base08 #26A98B
-#set $base09 #f99170
-set $base0A #ffefcc
-set $base0B #a5ffe1
-set $base0C #97e0ff
-set $base0D #97bbf7
-set $base0E #c0b7f9
-set $base0F #1f222d
-#set $base0F #fcc09e
+set $base06 #FF1B6D
+set $base07 #1f222d
 
-#Airblader colors
-
-#set $darkred     #cc241d
-#set $red         #fb4934
-#set $darkgreen   #98971a
-#set $green       #b8bb26
-#set $darkyellow  #d79921
-#set $yellow      #fabd2f
-#set $darkblue    #458588
-#set $blue        #83a598
-#set $darkmagenta #b16286
-#set $magenta     #d3869b
-#set $darkcyan    #689d6a
-#set $cyan        #8ec07c
-#set $darkwhite   #a89984
-#set $white       #ebdbb2"Nadie te va a hacer"Nadie te va a hacer tortas más ricas que yo" tortas más ricas que yo"
-# Use custom colors for black
-#set $black       #282828
-#set $darkblack   #1d2021
-#set $transparent #00000000
-
-
-#font pango:glisp 8
-font pango:scientifica 8
+# font pango:DejaVu Sans Mono 10
+#  font pango:glisp 8
+font pango:scientifica, FontAwesome 8
 #font pango:yuki 8
 #  pango=true
 #  floating_modifier $mod
 #  hide_edge_borders both
 #  new_window none
 
+#set $height 50
 
 # i3-gaps from https://github.com/Airblader/i3
 # Disable window titlebars entirely
@@ -79,8 +48,8 @@ smart_borders on
 
 # Press $mod+Shift+g to enter the gap mode. Choose o or i for modifying outer/inner gaps. Press one of + / - (in-/decrement for current workspace) or 0 (remove gaps for current workspace). If you also press Shift with these keys, the change will be global for all workspaces.
 set $mode_gaps Gaps: (o) outer, (i) inner
-set $mode_gaps_outer Outer Gaps: +(8)|-(9)|0 (local), +(6)|-(7)|0 (global)
-set $mode_gaps_inner Inner Gaps: +(8)|-(9)|0 (local), +(6)|-(7)|0 (global)
+set $mode_gaps_outer Outer Gaps: +(8)|-(9)|0 (local), +(6)|-(7)|0(5) (global)
+set $mode_gaps_inner Inner Gaps: +(8)|-(9)|0 (local), +(6)|-(7)|0(5) (global)
 bindsym $mod+Shift+g mode "$mode_gaps"
 
 mode "$mode_gaps" {
@@ -91,38 +60,52 @@ mode "$mode_gaps" {
 }
 
 mode "$mode_gaps_inner" {
-        bindsym 6     gaps inner current plus 5
-        bindsym 7     gaps inner current minus 5
-        bindsym 5     gaps inner current set 0
+        bindsym 8    gaps inner current plus 5
+        bindsym 9    gaps inner current minus 5
+        bindsym 0    gaps inner current set 0
 
-        bindsym 8     gaps inner all plus 5
-        bindsym 9     gaps inner all minus 5
-        bindsym 0     gaps inner all set 0
+        bindsym 6    gaps inner all plus 5
+        bindsym 7    gaps inner all minus 5
+        bindsym 5    gaps inner all set 0
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 mode "$mode_gaps_outer" {
-        bindsym 6     gaps outer current plus 5
-        bindsym 7     gaps outer current minus 5
-        bindsym 5     gaps outer current set 0
+        bindsym 8     gaps outer current plus 5
+        bindsym 9     gaps outer current minus 5
+        bindsym 0     gaps outer current set 0
 
-        bindsym 8     gaps outer all plus 5
-        bindsym 9     gaps outer all minus 5
-        bindsym 0     gaps outer all set 0
+        bindsym 6     gaps outer all plus 5
+        bindsym 7     gaps outer all minus 5
+        bindsym 5     gaps outer all set 0
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 
+
+
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
+
 
 # Lock screen from gnome 
 #bindsym $mod+Shift+x exec --no-startup-id  gnome-screensaver-command -l
 
+
 # Lock screen with i3lock
-bindsym $mod+Shift+x exec --no-startup-id  "~/.config/i3/myblocks/lock2 -p -f PragmataPro"
+bindsym $mod+Shift+x exec --no-startup-id  "~/.config/i3/myblocks/lock2 -p -f PragmataProMono"
+#bindsym $mod+Shift+x exec --no-startup-id "~/.config/i3/myblocks/lock"
+#bindsym $mod+Shift+x exec --no-startup-id i3lock --color "$base01"
+#bindsym $mod+Shift+x exec --no-startup-id "~/.config/i3/myblocks/lock2.sh ~/.i3/myblocks/lock.png"
+
+
+# Lock the i3 with lockmy3 shell script
+#bindsym $mod+p exec --no-startup-id "~/.config/i3/myblocks/lockmyi3"
+#bindsym $mod+Shift+p exec --no-startup-id "~/.config/i3/myblocks/lockmyi3 -- -d"
+
 
 # start a terminal
 #bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
@@ -132,6 +115,7 @@ bindsym $mod+Return exec --no-startup-id xfce4-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
+
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
@@ -139,24 +123,43 @@ bindsym $mod+Shift+q kill
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
-# Rofi exec
-#bindsym $mod+d exec --no-startup-id rofi -eh 2
-bindsym $mod+d exec --no-startup-id rofi -show drun -lines 4 -font "PragmataPro 14" -eh 2 -width 60 -show-icons true
 
-# Screenshot -- scrot
+# Rofi exec
+
+#bindsym $mod+d exec --no-startup-id rofi -eh 2
+
+bindsym $mod+d exec --no-startup-id rofi -show drun -lines 4 -eh 2
+
+#bindsym $mod+d exec --no-startup-id rofi -show drun -lines 4 -font "PragmataPro 12" -eh 2 -width 60 -show-icons true
+#bindsym $mod+Shift-e exec --no-startup-id rofimoji -lines 4 -font "PragmataPro 14" -eh 2 -width 60 -show-icons true
+
+#-modi 'drun,run,emoji:/usr/bin/rofimoji,window,ssh'
+
+#-opacity "80"
+
+#bindsym $mod+d exec rofi -show run -lines 3 -font "PragmataPro 16" -eh 2 -bc "$base01" -bg "$base01" -fg "$base07" -hlbg "$base03" -hlfg "$base05" -width 100 -padding 335 -opacity "85" 
+
+#bindsym $mod+d exec rofi -show run -lines 3 -font "PragmataPro 16" -eh 2 -color-window "#1f222d, #1f222d, #000000" -color-normal "#1f222d, #ffffff, #101218, #7780a1, #d1d4e0" -color-active "#1f222d, #268bd2, #ffffff, #268bd2, #d1d4e0" -color-urgent "#1f222d, #dc322f, #ffffff, #dc322f, #d1d4e0" -width 100 -padding 335 -opacity "85"
+
+#bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 100 -padding 500 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "Pragmata Pro 18"
+
+
+# Screenshot
 #bindsym $mod+Shift+Print exec --no-startup-id "mkdir -p ~/Pictures/Screenshots && scrot -q 100 ~/Pictures/Screenshots/scrot-$(date +%Y-%m-%d_%H-%M-%S).jpg"
+
 set $maimode "[S]crot . scrot&[U]pload . scrot2[C]lipboard . scrot[A]rea"
 bindsym $mod+Shift+Print      mode $maimode
 mode $maimode {
-    bindsym s         exec --no-startup-id "mkdir -p ~/Pictures/Screenshots && maim -m 10 ~/Pictures/Screenshots/scrot-$(date +%Y-%m-%d_%H-%M-%S).png", mode "default"
-    bindsym u         exec --no-startup-id "mkdir -p ~/Pictures/Screenshots && maim -m 10 -s ~/Pictures/Screenshots/upload.png && imgur ~/Pictures/Screenshots/upload.png", mode "default"
-    bindsym c         exec --no-startup-id "mkdir -p ~/Pictures/Screenshots && maim -m 10 -s | xclip -selection clipboard -t", mode "default"
-    bindsym a         exec --no-startup-id "mkdir -p ~/Pictures/Screenshots && maim | maim -m 10 -s ~/Pictures/Screenshots/cropped-$(date +%Y-%m-%d_%H-%M-%S).png", mode "default"
+    bindsym s         exec --no-startup-id "mkdir -p ~/Pictures/Screenshots && maim -m 10 ~/Pictures/Screenshots/scrot-$(date +%Y-%m-%d_%H-%M-%S).png && notify-send -t 2500 'Screenshot Taken' --icon=/home/rook/.local/share/icons/notify/screenshot.svg", mode "default"
+    bindsym u         exec --no-startup-id "mkdir -p ~/Pictures/Screenshots && maim -m 10 -s ~/Pictures/Screenshots/upload.png && notify-send -t 30000 'Screenshot Uploaded' '$(imgur ~/Pictures/Screenshots/upload.png)' --icon=/home/rook/.local/share/icons/notify/upload-pictures.svg", mode "default"
+    bindsym c         exec --no-startup-id "mkdir -p ~/Pictures/Screenshots && maim -m 10 -s | xclip -selection clipboard -t && notify-send -t 2500 'Screenshot Taken' 'loaded on clipboard' --icon=/home/rook/.local/share/icons/notify/clipboard.svg", mode "default"
+    bindsym a         exec --no-startup-id "mkdir -p ~/Pictures/Screenshots && maim | maim -m 10 -s ~/Pictures/Screenshots/cropped-$(date +%Y-%m-%d_%H-%M-%S).png && notify-send -t 2500 'Screenshot Taken' --icon=/home/rook/.local/share/icons/notify/screenshot.svg", mode "default"
     bindsym Return    mode "default"
     bindsym Escape    mode "default"
 }
 
 # Transparency mode 
+
 bindsym $mod+Shift+t mode "transparency"
 mode "transparency" {
     bindsym $tld              exec --no-startup-id transset-df -a 0
@@ -195,7 +198,7 @@ mode "transparency" {
 
 # Wallpaper Random Change
 #bindsym $mod+Shift+w exec "~/.config/i3/myblocks/wallpaper.sh"
-bindsym $mod+Shift+w exec --no-startup-id feh --bg-fill "$(find /usr/share/backgrounds/ -type f |sort -R |tail -1)"
+bindsym $mod+Shift+w exec --no-startup-id feh --bg-fill "$(find /usr/share/backgrounds/ -type f |sort -R |tail -1)" && notify-send -t 2500 "Wallpaper Updated" --icon=/home/rook/.local/share/icons/notify/wallpaper.svg
 
 # Change focus
 bindsym $mod+j focus left
@@ -203,11 +206,13 @@ bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
 
+
 # Alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
+
 
 # Move focused window
 bindsym $mod+Shift+j move left
@@ -215,28 +220,35 @@ bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
 
+
 # Alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+
 # Split in horizontal orientation
 bindsym $mod+h split h
+
 
 # Split in vertical orientation
 bindsym $mod+v split v
 
+
 # Enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen
+
 
 # Change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
+
 # Toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
+
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
@@ -268,6 +280,11 @@ bindsym $mod+Shift+s sticky toggle
 #--------- restart nm applet --------------------------
 bindsym $mod+Shift+n exec killall nm-applet; nohup nm-applet &
 
+#--------- Toggle draw terminalrs on background
+bindsym $mod+z exec --no-startup-id ~/.config/i3/scripts/draw_area3
+#bindsym $mod+z exec --no-startup-id ~/.config/i3/scripts/draw_area2
+#bindsym $mod+z exec --no-startup-id ~/.config/i3/scripts/drawterm
+
 # Set workspaces --------------------------------------------------------------------------------------------------------------
 set $workspace1 "1: "
 #set $workspace1 "1: "
@@ -284,9 +301,9 @@ set $workspace10 "10: "
 #set $workspace10 "10: "
 
 #gaps config
-workspace $workspace2 gaps inner 30
+workspace $workspace2 gaps inner 15
 workspace $workspace2 gaps outer 0
-workspace $workspace8 gaps inner 30
+workspace $workspace8 gaps inner 15
 workspace $workspace8 gaps outer 0
 
 # Switch to workspace ---------------------------------------------------------------------------------------------------------
@@ -305,6 +322,8 @@ bindsym $mod+0 workspace $workspace10
 bindsym $mod+Tab workspace back_and_forth
 bindsym $mod+Shift+Tab workspace next
 
+
+
 # Move focused container to workspace -----------------------------------------------------------------------------------------
 
 bindsym $mod+Shift+1 move container to workspace $workspace1
@@ -318,10 +337,12 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
+
 # Assign workspaces -----------------------------------------------------------------------------------------------------------
 assign [class="Sublime_text"] $workspace4
 assign [class="Subl3"] $workspace4
 assign [class="Chromium"] $workspace1
+assign [class="chromium"] $workspace1
 assign [class="Firefox"] $workspace5
 # Xfce Related
 assign [class="Nautilus"] $workspace3
@@ -329,11 +350,15 @@ assign [class="Thunar"] $workspace3
 assign [class="Xfce4-terminal"] $workspace2
 assign [class="libreoffice-writer"] $workspace6
 assign [class="libreoffice-calc"] $workspace6
+assign [class="libreoffice"] $workspace6
+assign [class="libreoffice-startcenter|Soffice"] $workspace6
 # assign [class="URxvt"] $workspace8
 assign [class="Steam"] $workspace10
 assign [class="Virt-manager"] $workspace10
 assign [class="mpv"] $workspace7
 assign [class="Gpicview"] $workspace6
+assign [class="Zathura"] $workspace7
+
 
 # Shutdown, Reboot, Lock Screen, and Logout #657b83 ---------------------------------------------------------------------------
 set $sysmenu "[P]oweroff . [H]ibernate . [S]uspend . re[B]oot . [L]ock . logou[T]"
@@ -348,7 +373,8 @@ mode $sysmenu {
     bindsym l         exec --no-startup-id "~/.config/i3/myblocks/lock2 -p -f Pragmata-Pro-Regular", mode "default"
     #bindsym l         exec --no-startup-id "~/.config/i3/myblocks/lock", mode "default"
     #bindsym l         exec --no-startup-id sh ~/.config/i3/i3lock.sh, mode "default"
-    bindsym t         exec i3-msg exit, mode "default"
+ #   bindsym t         exec --no-startup-id i3-msg exit, mode "default"
+    bindsym t         exec --no-startup-id "~/.config/i3/scripts/logout.sh"
     bindsym Return    mode "default"
     bindsym Escape    mode "default"
 }
@@ -379,16 +405,17 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+
 # status bar for i3. Using iblocks by vivien and airblader ---------------------------------------------------------------------
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
 # Window Colours
 #                         border  background text    indicator
-  client.focused          $base01 $base01    $base07 $base0F
-  client.focused_inactive $base02 $base02    $base03 $base0F
-  client.unfocused        $base02 $base02    $base03 $base0F
-  client.urgent           $base02 $base08    $base00 $base0F
+  client.focused          $base01 $base01    $base04 $base07
+  client.focused_inactive $base02 $base02    $base03 $base07
+  client.unfocused        $base02 $base02    $base03 $base07
+  client.urgent           $base02 $base06    $base00 $base07
 
 # Airblader colors
 
@@ -406,10 +433,12 @@ bar {
         id bar-1
 #        tray_output LVDS1
 #        output LVDS1
-        height 20
+        height 16
+        tray_padding 0
         strip_workspace_numbers yes
         #mode dock
         font pango: yuki, FontAwesome 8
+#        font pango: yuki, siji 8
         #tray_output primary
         position top
         colors {
@@ -417,10 +446,10 @@ bar {
               background $base01
               statusline $base05
 #                                border  background text
-              focused_workspace  $base01 $base01    $base07
+              focused_workspace  $base01 $base01    $base04
               active_workspace   $base01 $base02    $base03
               inactive_workspace $base01 $base01    $base03
-              urgent_workspace   $base01 $base01    $base08
+              urgent_workspace   $base01 $base01    $base06
 
 #           Airblader Colours
 #        statusline         $white
@@ -450,7 +479,7 @@ bar {
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle && pkill -RTMIN+10 i3blocks # mute sound
 
 # Old non working bindings in thinkpad
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% && pkill -RTMIN+10 i3blocks
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% && pkill -RTMIN+10 i3blocks 
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% && pkill -RTMIN+10 i3blocks
 
 # Media player controls
@@ -464,6 +493,7 @@ bindsym XF86AudioStop exec --no-startup-id mpc --host=0.0.0.0 --port=6600 stop
 bindsym XF86AudioPrev exec --no-startup-id ~/.config/i3/myblocks/mpcPrevSong.sh
 bindsym XF86AudioNext exec --no-startup-id mpc --host=0.0.0.0 --port=6600 next
 
+
 # Window Instances  --------------------------------------------------------------------------------------------------------
 
 for_window [window_role="pop-up"] floating enable
@@ -474,6 +504,7 @@ for_window [window_type="dialog"] floating enable
 for_window [window_type="menu"] floating enable
 
 for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move down 34 px
+#for_window [title="(?i)x220-calcurse"] floating enable, move position mouse, sticky enable, move down 24 px
 
 for_window [class="Pavucontrol"] floating enable, border none
 for_window [class="Sublime_text"] border none
@@ -489,13 +520,19 @@ for_window [class="(?i)nm-connection-editor"] floating enable, border none
 for_window [class="Xfce4-terminal"] border none
 for_window [class="Thunar"] border none
 for_window [class="File-roller"] floating enable
-for_window [class="URxvt"] floating enable, resize set 640 360, border none
+#for_window [class="URxvt"] floating enable, resize set 640 360, border none
+for_window [class="URxvt"] floating enable, border none
+#for_window [class="URxvt"] floating enable, border none, resize set 640 320
+for_window [class="St"] floating enable, border none
+for_window [class="Whatsie"] floating enable, border normal, resize set 680 680
 for_window [class="Steam"] floating enable, border normal
 for_window [class="mpv"] floating enable, border none
 for_window [class="Virt-manager"] floating stacked
 for_window [class="Nautilus"] floating enable, border none
 for_window [class="Chromium"] border none
+for_window [class="chromium"] border none
 for_window [class="^discord$"] border none
+for_window [class="zathura"] border none
 #for_window [class="^Chrome$" title=" - Chromium$"] border none
 #for_window [class="^chrom$"] border 1pixel
 #for_window [class="chromium-browser"] border non e
@@ -504,8 +541,12 @@ for_window [class="Gpicview"] border none
 for_window [class="Pamac-manager"] floating enable, border none
 for_window [class="Pamac-updater"] floating enable, border none
 for_window [class="(?i)keepassx2"] floating enable, border normal
+for_window [class="(?i)keepassxc"] floating enable, border normal
 #for_window [class="(?i)keepass"] floating enable, border normal
 for_window [class="Gnome-disks"] floating enable, border none
+for_window [class="Blueman-manager"] floating enable
+for_window [class="Terminator Preferences"] border 
+
 
 #Graphic glitch fix 
 new_window none
@@ -519,7 +560,7 @@ new_window none
 
 #exec --no-startup-id setxkbmap -layout us -variant intl -option deadkeys
 
-#Autostart gnome-keyring
+##Autostart gnome-keyring
 exec --no-startup-id gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
 
 #xscreensaver
@@ -529,7 +570,10 @@ exec --no-startup-id xscreensaver -no-splash
 exec --no-startup-id mpd .mpd/mpd.conf
 
 #compton compositor
-exec --no-startup-id compton --config ~/.config/compton.conf -CGb
+#exec --no-startup-id compton --config ~/.config/compton.conf -CGb
+
+#pico compositor (picom)
+exec --no-startup-id picom --config ~/.config/picom.conf -CGb
 
 #Set random wallpaper
 exec --no-startup-id feh --bg-fill "$(find /usr/share/backgrounds/ -type f |sort -R |tail -1)"
